--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha08'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha08'
-    implementation 'androidx.preference:preference:1.1.1'
-    testImplementation 'junit:junit:4.+'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha09'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha09'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
+    implementation 'androidx.work:work-runtime-ktx:2.6.0'
+    implementation 'commons-net:commons-net:3.6'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
